--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "task-flow",
     "version": "1.1.3",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/image/logo_icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
