--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
     "slug": "task-flow",
     "version": "1.1.3",
     "orientation": "portrait",
-    "icon": "./assets/image/logo_icon.png",
+    "icon": "./assets/images/logo_icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/images/logo_icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -17,12 +17,19 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/images/logo_icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.lrnzdev.taskflow"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
-    }
+      "favicon": "./assets/images/logo_icon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "66ba8938-3fa7-4dec-b8bf-af345195f62d"
+      }
+    },
+    "owner": "lrnzdev"
   }
 }
